<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/event_add_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_gray"
        android:textSize="18sp"
        android:text="@string/event_add_dialog_title"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/event_add_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/very_light_gray"
        app:layout_constraintTop_toBottomOf="@id/event_add_title" />

    <TextView
        android:id="@+id/event_add_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_add_dialog_name"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/event_add_divider"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/event_add_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLines="1"
        android:maxLength="24"
        android:textColorHint="@color/light_gray"
        android:textColor="@color/dark_gray"
        android:gravity="top"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/event_add_name"
        android:importantForAutofill="no"
        tools:targetApi="O"/>

    <TextView
        android:id="@+id/event_add_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_add_dialog_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/event_add_name_text"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/event_add_content_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLines="1"
        android:maxLength="24"
        android:textColorHint="@color/light_gray"
        android:textColor="@color/dark_gray"
        android:gravity="top"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/event_add_content"
        android:importantForAutofill="no"
        tools:targetApi="O"/>

    <TextView
        android:id="@+id/event_add_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_add_dialog_notification"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/event_add_content_text"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/event_add_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:thumbTint="@color/white"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_add_notification" />

    <TextView
        android:id="@+id/event_add_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_add_dialog_start_time"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/event_add_switch"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/event_add_start_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_add_dialog_start_time_hint"
        android:textColor="@color/medium_gray"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/event_add_start_time"
        app:layout_constraintTop_toTopOf="@id/event_add_start_time"
        app:layout_constraintBottom_toBottomOf="@id/event_add_start_time"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/event_add_button"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/edit_dialog_record_button"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/event_add_start_time" />

</androidx.constraintlayout.widget.ConstraintLayout>